--- a/smart-calendar/src/index.html
+++ b/smart-calendar/src/index.html
@@ -6,11 +6,22 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        background: linear-gradient(135deg, #6d3bf7 0%, #000000 100%);
+        min-height: 100vh;
+      }
+      .app-root {
+        display: block;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <!-- Root do Angular -->
     <app-root data-component="AppRoot" class="app-root"></app-root>
   </body>
-</html>
-</body>
 </html>
