--- a/smart-calendar/src/index.html
+++ b/smart-calendar/src/index.html
@@ -23,7 +23,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        background: linear-gradient(135deg, #6d3bf7 0%, #000000 100%);
+        background: #04001A;
         min-height: 100vh;
         overflow-x: hidden;
         -webkit-font-smoothing: antialiased;
